HttpUnit release notes

Known problems:
    1. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include Document.open() and some DOM properties


Revision History:
 9-Nov-2002
Problems fixed:
    1. As of 1.5, HttpUnit was not building if NekoHTML was not in the classpath. This is now fixed.

 7-Nov-2002
Acknowledgements:
    Thanks to Raul Benito Garcia for pointing out the problem with no-action forms accessed with URL parameters
    Thanks to Charles Mendis for finding the bug in the proxy support
Problems fixed:
    1. When a form obtained using parameters as part of the URL has no action, those parameters are now sent
       as part of the form submission.
    2. Bug #635273 Proxy port always interpreted as port 80 due to typo

 6-Nov-2002
Problems fixed:
    1. Simply removing the NekoHTML parser jar from the classpath was not enough to re-enable JTidy. Now it is.

 5-Nov-2002
Acknowledgements:
    Thanks to Troy Waldrep for pointing out the non-standard Refresh header definition accepted in popular browsers

Additions:
    1. Added support for the Refresh header

 4-Nov-2002
Acknowledgements:
    Thanks to Geert Bevin for fixing a problem with comparing cookies

Problems Fixed:
    1. Adding both a "global" cookie and a server-based cookie with the same name causes a NullPointerException

 3-Nov-2002 1.5
Acknowledgements:
    Thanks to Ken Corbin for adding tests for disabled and read-only parameters.
    Thanks to Geert Bevin for fixing a problem with generation of cookie headers that affects some servers.
    Thanks to Richard Harris for adding support for the title attribute for links,
           for adding the JavaScript Navigator.platform property,
           for adding Javascript support for the Screen object,