@@ -10,6 +10,16 @@ Limitations:
 
 
 Revision History:
+12-Nov-2002
+Acknowledgements:
+    Thanks to Michael McCallum for adding handling for bad character-set headers and an ant target to build the examples
+
+Problems fixed:
+    1. Bad character-set headers from servers would result in an UnsupportedEncodingException.
+
+Additions:
+    1. Added support for the location.href property
+
  9-Nov-2002
 Problems fixed:
     1. As of 1.5, HttpUnit was not building if NekoHTML was not in the classpath. This is now fixed.
